<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="10dp"
    android:layout_marginEnd="25dp"
    android:layout_marginStart="25dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textSocioItemParticipante"
            android:textSize="15sp"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textNombreItemParticipante"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textNombreItemParticipante"
            android:textSize="21sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/textSocioItemParticipante"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textTitChildItemParticipante"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textTitChildItemParticipante"
            android:text="@string/childnumber_tit"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/textNombreItemParticipante"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textChildItemParticipante"
            app:layout_constraintBottom_toTopOf="@id/textTitEdadItemParticipante"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textChildItemParticipante"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/textTitChildItemParticipante"
            app:layout_constraintStart_toEndOf="@id/textTitChildItemParticipante"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/textTitChildItemParticipante"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textTitEdadItemParticipante"
            android:text="@string/edad_tit"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/textTitChildItemParticipante"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textEdadItemParticipante"
            app:layout_constraintBottom_toTopOf="@id/textTitContactoItemParticipante"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textEdadItemParticipante"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/textTitEdadItemParticipante"
            app:layout_constraintStart_toEndOf="@id/textTitEdadItemParticipante"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/textTitEdadItemParticipante"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textTitContactoItemParticipante"
            android:text="@string/contacto_tit"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/textTitEdadItemParticipante"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textContactoItemParticipante"
            app:layout_constraintBottom_toTopOf="@id/constraintAccionsItemParticipante"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textContactoItemParticipante"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/textTitContactoItemParticipante"
            app:layout_constraintStart_toEndOf="@id/textTitContactoItemParticipante"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/textTitContactoItemParticipante"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/constraintAccionsItemParticipante"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintTop_toBottomOf="@id/textTitContactoItemParticipante"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fabEditItemParticipante"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/ic_edit"
                app:tint="@color/white"
                app:fabSize="mini"
                app:backgroundTint="@color/fabActions"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/fabLocationItemParticipante"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fabLocationItemParticipante"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/ic_location"
                app:tint="@color/white"
                app:fabSize="mini"
                app:backgroundTint="@color/fabActions"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/fabEditItemParticipante"
                app:layout_constraintEnd_toStartOf="@id/fabPhoneItemParticipante"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fabPhoneItemParticipante"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/ic_phone"
                app:tint="@color/white"
                app:fabSize="mini"
                app:backgroundTint="@color/fabActions"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/fabLocationItemParticipante"
                app:layout_constraintEnd_toStartOf="@id/fabDataItemParticipante"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fabDataItemParticipante"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/ic_person"
                app:tint="@color/white"
                app:fabSize="mini"
                android:visibility="gone"
                app:backgroundTint="@color/fabActions"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/fabPhoneItemParticipante"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>